--- a/prob_20/Javascript/lafesta611&flowkater/factorial.html
+++ b/prob_20/Javascript/lafesta611&flowkater/factorial.html
@@ -1,6 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head><script src="factorial.js"></script><head>
-<body>
-<body>
-</html>
+<head>
+<script src="factorial.js"/>
+
